# full-stack-langgraph-chat

./: README.md
backend/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
backend/app/: agent.py  agent_service.py  main.py
backend/app/agent/: agent.py
backend/app/core/: database.py  settings.py
backend/app/models/: user.py
backend/app/router/: agent.py  auth.py  user.py
backend/app/schema/: agent.py  user.py
backend/app/scripts/: seed_db.py
backend/app/services/: agent_service.py  auth_service.py  user_service.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: Login.jsx  MainContent.jsx  UserProvider.jsx
frontend/src/hooks/: useUser.js
