[tool.poetry]
name = "full-stack-langgraph-chat"
version = "1.0.0"
description = ""
authors = ["Justin Largo <justinlargo7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
fastapi = "^0.112.2"
langchain = "^0.2.15"
langgraph = "^0.2.15"
langchain-google-genai = "^1.0.10"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.4.0"
alembic = "^1.13.2"
sqlalchemy = "^2.0.34"
psycopg2-binary = "^2.9.9"
argon2-cffi = "^23.1.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
